--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body > iframe
 div.body
 {
     display: block !important;
+    font-family:Arial;
 }
 ol, ul
 {
@@ -84,6 +85,12 @@ ul#nav-links > li > a
      padding-top: 1.5em;
     padding-bottom: 1.5em;
     border-bottom: 1px solid rgb(200,200,200);
+    text-transform:uppercase;
+}
+ul#nav-links > li > a > i
+{
+    margin-left:5px;
+    margin-right:5px;
 }
 div#main-tabs
 {
